# Sports-Steve

./: .gitignore  Betting Agent  Big skills  README.md  agent.json  launcher.py  pyproject.toml  requirements.txt  run.bat  run.ps1  sports_steve.spec  start-servers.ps1
.github/workflows/: build-release.yml  release.yml
Bet-Buddy--main/: .env.example
Bet-Buddy--main/backend/: .env.example  package-lock.json
Bet-Buddy--main/frontend/: .env.example  package-lock.json
data/: sports_steve.db-shm  sports_steve.db-wal
frontend/: .env.example  build_errors_full.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Sidebar.tsx  (+1 more)
frontend/src/contexts/: ModeContext.tsx
frontend/src/data/: glossary.ts
frontend/src/hooks/: useLocalSync.ts
frontend/src/lib/: betBuddy.ts  db.ts  supabase.ts
frontend/src/pages/: BankrollManager.tsx  BetHistory.tsx  Dashboard.tsx  HelpCenter.tsx  OddsCalculator.tsx  Picks.tsx  Settings.tsx
frontend/src/types/: index.ts
src/: account_tracker.py  budget.py  circadian.py  config.py  database.py  main.py  risk_manager.py  scheduler.py
src/brokers/: __init__.py  base.py  draftkings.py  oddsapi.py  prizepicks.py
src/optimization/: parlay_builder.py
src/services/: __init__.py  picks_matcher.py
src/sports_steve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_brokers.py  test_features.py  test_picks_matcher.py  test_regression.py
(+4 files in other folders)
